--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -22,6 +22,7 @@
         android:id="@+id/textInputLayoutNama"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Nama"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -39,6 +40,7 @@
         android:id="@+id/textInputLayoutUmur"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Umur"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
